# galax_eleves

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.7d2b8de  CMakeLists.txt.user.e1d9007  CMakeLists.txt.user.efdeb52  README.MD
data/: loup.tab
doc/: README.md  config.txt
src/: Initstate.cpp  Initstate.hpp  Particles.cpp  Particles.hpp  config.hpp.in  main.cpp
src/Display/: Display.cpp  Display.hpp
src/Display/Display_NO/: Display_NO.cpp  Display_NO.hpp
src/Display/Display_SDL2/: Display_SDL2.cpp  Display_SDL2.hpp
src/Model/: Body.cpp  Body.hpp  Model.cpp  Model.hpp
src/Model/Model_CPU/: BHTree.cpp  BHTree.hpp  Model_CPU.cpp  Model_CPU.hpp
src/Model/Model_CPU/Model_CPU_fast/: Model_CPU_fast.cpp  Model_CPU_fast.hpp  model_cpu_bh.cpp  model_cpu_bh.hpp
src/Model/Model_CPU/Model_CPU_naive/: Model_CPU_naive.cpp  Model_CPU_naive.hpp
src/Model/Model_GPU/: Model_GPU.cpp  Model_GPU.hpp  kernel.cu  kernel.cuh
src/Timing/: Timing.cpp  Timing.hpp
